--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
                 <div class="col-md-6 top-bio"> 
                     <h1> Nazmul Hasan </h1>
-                    <p> <i class="fas fa-map-marker-alt"> </i> Ga-26, Mohakhali, Dhaka – 1212. </p>
+                    <p> <i class="fas fa-map-marker-alt"> </i> Mohakhali, Dhaka – 1212. </p>
                     <p> <i class="fas fa-mobile-alt"></i> 0168009941,01521497832 </p>
                     <p> <i class="fas fa-envelope"></i> nahid.nsu152@gmail.com </p>
                     <p> <i class="fab fa-github"></i> <a href="https://github.com/nahidnsu152"> Github </a> &emsp; 
                     <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/nahid-nsu152/"> LinkedIn </a> </p>
-                    <p> Date of Birth: 18/3/1997  &emsp; |  &emsp; Nationality: Bangladeshi</p>
+                    <p> Date of Birth: 18/3/****  &emsp; |  &emsp; Nationality: Bangladeshi</p>
                     <hr>
                     <div class="article">
                         <h2 class="article-title">  Objective  </h2>
