--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 </tr>
                                 <tr>
                                     <td> <strong> Mobile Application Development </strong></td>
-                                    <td> React Native (Basic), Dart, Flutter </td>
+                                    <td> React Native (Basic) </td>
                                 </tr>
 
                                 <tr> 
