--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 </tr>
                                 <tr>
                                     <td> <strong> Mobile Application Development </strong></td>
-                                    <td> React Native, Dart & Flutter </td>
+                                    <td> Dart & Flutter, React Native </td>
                                 </tr>
 
                                 <tr> 
