--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
 
                                 <tr> 
                                     <td> <strong> Database </strong> </td>
-                                    <td> MySQL </td>
+                                    <td> MySQL, Firebase </td>
+                                </tr>
+                                
+                                <tr> 
+                                    <td> <strong> Project Management </strong> </td>
+                                    <td> Trello, Slack </td>
                                 </tr>
 
                                 <tr>
